refactor: rename cli-disablemic -> cli-disable-mic across codebase
- Rename package name from fix-my-mic to cli-disable-mic in package.json
- Rename binary entry point from fix-my-mic to cli-disable-mic in package.json
- Rename bin/fix-my-mic.js to bin/cli-disable-mic.js
- Update error message in bin/cli-disable-mic.js (fix-my-mic -> cli-disable-mic)
- Update raw GitHub URL in bin/cli-disable-mic.js (cli-disablemic -> cli-disable-mic)
- Update REPO_RAW URL in install.sh (cli-disablemic -> cli-disable-mic)
- Update curl URL comment in uninstall.sh (cli-disablemic -> cli-disable-mic)
- Update repository.url and homepage in package.json (cli-disablemic -> cli-disable-mic)
- Replace all npx fix-my-mic references in README.md with npx cli-disable-mic

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fix-my-mic",
+  "name": "cli-disable-mic",
   "version": "1.0.0",
   "description": "stop macOS from using your AirPods as the default microphone. one command, runs forever.",
   "bin": {
-    "fix-my-mic": "bin/fix-my-mic.js"
+    "cli-disable-mic": "bin/cli-disable-mic.js"
   },
   "files": [
     "bin/"
@@ -25,7 +25,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yigitkonur/cli-disablemic"
+    "url": "https://github.com/yigitkonur/cli-disable-mic"
   },
-  "homepage": "https://github.com/yigitkonur/cli-disablemic#readme"
+  "homepage": "https://github.com/yigitkonur/cli-disable-mic#readme"
 }
