Rename npm package from cli-disable-mic to fix-my-mic
Users can now install and run with `npx fix-my-mic` instead of
`npx cli-disable-mic`.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cli-disable-mic",
+  "name": "fix-my-mic",
   "version": "1.0.0",
   "description": "stop macOS from using your AirPods as the default microphone. one command, runs forever.",
   "bin": {
-    "cli-disable-mic": "bin/cli-disable-mic.js"
+    "fix-my-mic": "bin/fix-my-mic.js"
   },
   "files": [
     "bin/"
