fix: remove remote code execution via curl | bash
The npm entry point was downloading and executing install.sh from GitHub
at runtime using `curl -fsSL | bash`, which is a critical security risk
(supply chain attack, MITM, compromised repo). Now runs the local
install.sh directly instead, and bundles install.sh, uninstall.sh, and
main.swift in the published npm package so no network fetch is needed.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "fix-my-mic": "bin/fix-my-mic.js"
   },
   "files": [
-    "bin/"
+    "bin/",
+    "install.sh",
+    "uninstall.sh",
+    "main.swift"
   ],
   "os": [
     "darwin"
